TRYING to fix BG issue on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
-/*html {
-  background-color: rgb(57, 57, 57);
+html {
+  background-color: rgb(57, 57, 57); /* IS USED TO POORLY FIX THE SCROLLING + POPUP BG ISSUE ON MOBILE*/
   overflow: visible;
-}*/
+}
 
 body {
   background-color: rgb(240,240,240);
